versions/v4.1.0/doxygen/html/globals_vars.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/globals_vars.html
original_path: doxygen/html/globals_vars.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all variables with links to the files they belong to:

### - $ -

- $narg : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#ac743b07138dff5c6fe59b445965c1fc7), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#ad1385b31668df52491c21319ebd92fd9)

### - a -

- aa : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a8be979fed261ea1fe93f3bf629f3aa9b), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a8be979fed261ea1fe93f3bf629f3aa9b)
- ab : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a65db1da5eb749b340685303a403ae14d), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a65db1da5eb749b340685303a403ae14d)
- ADD2R : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a4213081f87edc43524180616979bd1b8), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#abae854c7c1e2bbdf09afd83e4a2f931b)
- ADD3R : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a9cb390b45f968e4859be09505e376ff6), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#addcee75a0f02e7c0e6509a645faef441)
- ADDR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a74d94870ad16a58f150bf43374bcc908), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#abdb73303312677832377cec11ddbcfb2)
- ANDR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#abf83bab508dfaea0c41d8093d7b1c551), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a77faee894232464d5aebec81651b4ec2)
- as : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#ac93d5f4341d561a6bd9864e880cffcf4), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#ac93d5f4341d561a6bd9864e880cffcf4)
- ASLR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#aaff8d26b5c5198b247467cb55a7df38b), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a2029c0d417dae61e19843d312739a317)

### - b -

- blk\_name : [rpu\_hw\_if.h](rpu__hw__if_8h.md#adeeb0a092efcba75f774110aa59de589)
- BMSKNR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#aa4129c1e4b6617f30740aada9bdd872d), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#aa5f8df7d6794de4e8b999d6f27eb26cd)
- boot\_current\_slot : [img\_mgmt.h](group__mcumgr__img__mgmt.md#ga0d6bb8877516ca486c318fa12c129138)
- BREQR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#abe3bac34bb316244a20ddc88ebc75937), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#af7748ddc29f3b0f94995b1b0393a7089)
- BRR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a3b737f39fe46787abeecc3661fad4946), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a669b40b4c5c00c6c38d327ca6f8fb9f5)
- bt\_addr\_any : [addr.h](group__bt__addr.md#gadd64afda1a14cbc2740f205e90169152)
- bt\_addr\_le\_any : [addr.h](group__bt__addr.md#ga40c282f720d13b5d24a2dd62bfdceb73)
- bt\_addr\_le\_none : [addr.h](group__bt__addr.md#gaefa17a553b6f8e9ad599e8db7538e1b8)
- bt\_addr\_none : [addr.h](group__bt__addr.md#ga0b2f611fbd28b066d261b81303c4b93f)
- bt\_mesh\_cdb : [cdb.h](cdb_8h.md#afa51505628405a3778d1bdb4fd905ca0)
- bt\_mesh\_shell\_blob\_cli : [shell.h](bluetooth_2mesh_2shell_8h.md#accbfc012251815338ace23f8cb49fff6)
- bt\_mesh\_shell\_blob\_srv : [shell.h](bluetooth_2mesh_2shell_8h.md#a4c4b37f663428cedfb466832963b9c1b)
- bt\_mesh\_shell\_dfu\_cli : [shell.h](bluetooth_2mesh_2shell_8h.md#a9bc67c98117f6a8741bbd3e40f718b3b)
- bt\_mesh\_shell\_dfu\_srv : [shell.h](bluetooth_2mesh_2shell_8h.md#a0bac1827aa84e4801252c9b955373067)
- bt\_mesh\_shell\_health\_cli : [shell.h](bluetooth_2mesh_2shell_8h.md#a4c7a470a6d7cc91ea1b240756053d017)
- bt\_mesh\_shell\_health\_srv : [shell.h](bluetooth_2mesh_2shell_8h.md#a313cd00833d5b522a73a3ac5e4eb9596)
- bt\_mesh\_shell\_prov : [shell.h](bluetooth_2mesh_2shell_8h.md#a1e999cded973436a218782acac1ab15b)
- bt\_mesh\_shell\_rpr\_cli : [shell.h](bluetooth_2mesh_2shell_8h.md#a231f1c8492097ae23edb2aeb82139752)
- bt\_mesh\_shell\_target\_ctx : [shell.h](bluetooth_2mesh_2shell_8h.md#ab76d90bc284131a56904a2c1b9c19ae2)

### - c -

- cc : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a6bcd6506e83f22db3e77c1172a6d7ba6), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a542424a4ef87da5a865ce186a46d9c58)
- cc1200\_rf\_settings : [cc1200.h](cc1200_8h.md#a79700c6e23dd49b3d86a631294a2deed)
- CMPR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a2914e6612b9957eba801ab818e2cbded), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a112901bfa2cae27eead5f1b117b276e6)

### - d -

- d : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#abaebda2ebe87111969af89be8895e417), [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#aabf7c54edb88081579e2b6fc941f10e9), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a6b6a358e951559f7fd95cb1da716005c), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a115a46bcc971f5b76b0c10997a1902e9)

### - f -

- fake\_can\_add\_rx\_filter\_fake : [can\_fake.h](can__fake_8h.md#a9b05d007e7877d56e94722b17aea10fd)
- fake\_can\_get\_capabilities\_fake : [can\_fake.h](can__fake_8h.md#a408aaa649f5a197e573f801e546076ca)
- fake\_can\_get\_core\_clock\_fake : [can\_fake.h](can__fake_8h.md#a0aab479cca9f1157c0a32804ea749698)
- fake\_can\_get\_max\_filters\_fake : [can\_fake.h](can__fake_8h.md#a0950f8fd3abd1d4aa294fe100bfcfb2a)
- fake\_can\_get\_state\_fake : [can\_fake.h](can__fake_8h.md#af563820ee8d02bce89f349d12a46f9f1)
- fake\_can\_recover\_fake : [can\_fake.h](can__fake_8h.md#a1f04a81c75562f868518d011e8fe9911)
- fake\_can\_remove\_rx\_filter\_fake : [can\_fake.h](can__fake_8h.md#ab350b59af19dfa00cb981a8835aeca76)
- fake\_can\_send\_fake : [can\_fake.h](can__fake_8h.md#a84925007d5d77ead31e78e949cba0f7d)
- fake\_can\_set\_mode\_fake : [can\_fake.h](can__fake_8h.md#a4f789b00ba83a80bc75b04b6799ce572)
- fake\_can\_set\_state\_change\_callback\_fake : [can\_fake.h](can__fake_8h.md#a63e0933bc6255b8663efe2a8661bfdf7)
- fake\_can\_set\_timing\_data\_fake : [can\_fake.h](can__fake_8h.md#a6a5d709ef98eda22f3595af5ae240d14)
- fake\_can\_set\_timing\_fake : [can\_fake.h](can__fake_8h.md#a052d183150326c3590f7143a6afd9228)
- fake\_can\_start\_fake : [can\_fake.h](can__fake_8h.md#a1962b9cac135a1ecb454fa87637c7b46)
- fake\_can\_stop\_fake : [can\_fake.h](can__fake_8h.md#ac15a91c767d92692ddf6c7a59cb94499)
- fff : [fff.h](fff_8h.md#a484e7178f2bbf168acc8ce2111c913f2)

### - g -

- g\_img\_mgmt\_state : [img\_mgmt.h](group__mcumgr__img__mgmt.md#gad3dce7b70ce3338588003a021eec1ab6)
- gdb\_mem\_num\_regions : [gdbstub.h](debug_2gdbstub_8h.md#a439e80da6ae6e5388f9a78744d0978d1)
- gdb\_mem\_region\_array : [gdbstub.h](debug_2gdbstub_8h.md#a9d01831c656bae3ee4592ccb45456295)

### - h -

- health\_srv\_meta : [shell.h](bluetooth_2mesh_2shell_8h.md#a5ccd2d0b4a3ff642a89fcd77dd0e935f)
- hi : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a0ef89636f8d03ae88717291e66d59527), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a0ef89636f8d03ae88717291e66d59527)

### - i -

- i2c\_iodev\_api : [i2c.h](group__i2c__interface.md#gaea8f7eeb3ed41c260d7a6c3cf078c3ec)
- i3c\_iodev\_api : [i3c.h](group__i3c__interface.md#gace1f8f10af2d87bb5a17441645030833)
- it8801\_id\_verify : [mfd\_ite\_it8801.h](mfd__ite__it8801_8h.md#a0e013175c1b2fd6ff3b62fb6eb3512ce)

### - k -

- k\_mem\_domain\_default : [mem\_domain.h](group__mem__domain__apis.md#ga3613abdb546a66059fa3f621a2ebd41a)

### - l -

- layout : [bindesc.h](bindesc_8h.md#af8174bbae9567135fe17f1e55621f641)
- LDR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a1a46311eefaef8a6a42bae236b114d6b), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a4bfaf9dfe8fddd7526716c9007a7cd87)
- log\_backend\_shell\_api : [shell.h](group__shell__api.md#gaddf27615ed72440ecb63aa1d84962c82), [shell\_log\_backend.h](shell__log__backend_8h.md#addf27615ed72440ecb63aa1d84962c82)
- log\_multidomain\_backend\_api : [log\_multidomain\_helper.h](group__log__backend__multidomain.md#ga8e4e6908b6533b11d8cc351f67a5f976)
- log\_multidomain\_link\_api : [log\_multidomain\_helper.h](group__log__backend__multidomain.md#ga64e0fb3d32e2aa1e3353ffe28c05befa)
- LRR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#af065467bfff1489bf1d38337a5d60988), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a917ec782be0164288e0437198ff99026)
- LSRR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a8667c7c46bc57aff0cac0ca728023ed5), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#aeb496276f0b24fe5026aa43a92ec6be1)

### - m -

- mmu\_config : [arm\_mmu.h](mmu_2arm__mmu_8h.md#afb6753aab93fd940c3fc43c11a908216)
- modem\_chat\_any\_match : [chat.h](chat_8h.md#ada2cd7e12d9a37af6f13ecfb6c182176)
- modem\_chat\_empty\_matches : [chat.h](chat_8h.md#ac94a45b118b155ca7de1a45d12297ae4)
- modem\_chat\_empty\_script\_chats : [chat.h](chat_8h.md#a19cd30454fb4eb9293e87b24a8cf0655)
- MOVR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a62c92c2e7e269b0afb80256c5207da7b), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a62c92c2e7e269b0afb80256c5207da7b)
- mpu\_config : [arc\_mpu.h](arc__mpu_8h.md#a347b2bb6c23b874d7a20d4b5ce4d23b1), [arm\_mpu.h](mpu_2arm__mpu_8h.md#ab4f9746862097dfdc048d75c9c08b795), [nxp\_mpu.h](nxp__mpu_8h.md#a07ea21656f7fd3c46d30eab43d5b2721), [arm\_mpu.h](4_2cortex__r_2arm__mpu_8h.md#ab4f9746862097dfdc048d75c9c08b795)
- multiboot\_info : [multiboot.h](multiboot_8h.md#a596cbe9e737c9acca4328e2e03186896)

### - n -

- ne : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a8de167d4ebfa82a6635ea26eee8c907c), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a69384ae28398c3f7eb9ffc42f9fb3df2)
- npf\_default\_drop : [net\_pkt\_filter.h](group__net__pkt__filter.md#ga8fc592feedeceb5172f8747a29697dd7)
- npf\_default\_ok : [net\_pkt\_filter.h](group__net__pkt__filter.md#gaac489d75c023952243589cba7ff7367a)
- npf\_ipv4\_recv\_rules : [net\_pkt\_filter.h](group__net__pkt__filter.md#gad521d7ac3270970833aec48d8a517d85)
- npf\_ipv6\_recv\_rules : [net\_pkt\_filter.h](group__net__pkt__filter.md#gab91ca81aab2da48066538d72caf0c8ae)
- npf\_local\_in\_recv\_rules : [net\_pkt\_filter.h](group__net__pkt__filter.md#ga571e9fb34eb4e3cbf38f885b5e786021)
- npf\_recv\_rules : [net\_pkt\_filter.h](group__net__pkt__filter.md#ga9714529658625e906264a46ad1a9be6f)
- npf\_send\_rules : [net\_pkt\_filter.h](group__net__pkt__filter.md#ga8017a041d3168c76e39bdfac011b9315)

### - o -

- off : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#adbc19a384ffe3a93866980a920b08394), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#adbc19a384ffe3a93866980a920b08394)
- op1 : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a1b3df9ba4c3032118bbf49c7c7e28edd), [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a511259cb12c7f1112602eda6a77fab92), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a0f83c16c864dd25dbe54e81e22ea092a), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a1aab4b8f06d98e34b6f619d279e48194)
- ORR : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#ad0672a138db1d400f19f2bf7f08c0088), [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#ac61c6a6fd2801a19a8746a437a7b2a4a), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a73772c29f6eea427991a6d445478808d), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#aed2483697c78bf1e9bef39e9d9d4c11d)

### - p -

- POPR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a0f674b4d35f1df924883bff738f5c288), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#ae0f954f282eaa7ea513662f4c6f5b86b)
- PUSHR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#aaecb2f53890260a5b5518501ac4ae55b), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a816d3dff509e4fbd6f919c24ea6baa00)

### - q -

- qspi\_perip : [qspi\_if.h](qspi__if_8h.md#a1814c557c5e1a14b180cdb96ffdc6efc)

### - r -

- r : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#af16d2973cfd145a2ebdbf9528d5d9ae2), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#af16d2973cfd145a2ebdbf9528d5d9ae2)
- rpu\_7002\_memmap : [rpu\_hw\_if.h](rpu__hw__if_8h.md#afcb709e46416f4955669ef57cb1fea94)
- rtio\_partition : [rtio.h](group__rtio.md#ga86a38086dd85150ab6e479d73db1c6d1)

### - s -

- s : [asm-macro-32-bit-gnu.h](asm-macro-32-bit-gnu_8h.md#a53a876d393ad3ed42cfeb2173695978d), [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a54157b9c4080ed8fdbe7272d4ffe2b34), [asm-macro-64-bit-gnu.h](asm-macro-64-bit-gnu_8h.md#a39e110111e0f42a0d4fb025a96888293), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a8592182fba37f6a5ad2e67576130f9df)
- shell\_adsp\_memory\_window\_transport\_api : [shell\_adsp\_memory\_window.h](shell__adsp__memory__window_8h.md#a47c6df5cd7aaf460925783c10db2d5de)
- shell\_dummy\_transport\_api : [shell\_dummy.h](shell__dummy_8h.md#a26384803c3ef08c2c357f2c383f837e6)
- shell\_mqtt\_transport\_api : [shell\_mqtt.h](shell__mqtt_8h.md#a5f2ae59f251db48e1937b06a96451bbb)
- shell\_rpmsg\_transport\_api : [shell\_rpmsg.h](shell__rpmsg_8h.md#a9189ca38b2b0d084a9169828abcf91d7)
- shell\_rtt\_transport\_api : [shell\_rtt.h](shell__rtt_8h.md#a981a63a78fb537843526cb19cdd667e4)
- shell\_telnet\_transport\_api : [shell\_telnet.h](shell__telnet_8h.md#a39f18c861db9a87f151285600d44014e)
- shell\_uart\_transport\_api : [shell\_uart.h](shell__uart_8h.md#ab69d50c56e978e985781b8bc03ddd9e1)
- shell\_websocket\_transport\_api : [shell\_websocket.h](shell__websocket_8h.md#afd54f1b32a1516cd786320957222356b)
- size\_t : [retained\_mem.h](retained__mem_8h.md#a36713c339c3c5ec6d6bd481480bdb6f9)
- spi\_iodev\_api : [spi.h](group__spi__interface.md#gacd22d734b1b2729e09862065d44b8ce9)
- SRR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a4ab637a402c195c93f2e5f1d0fcccf78), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#a72534d5417fa70333c420b0b6e4b014f)
- STR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a2559ca808b98187e087954aafba01ad1), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#ae60b8dec93a8b22478b4a3c0e5e3041e)
- SUBR : [asm-macro-32-bit-mwdt.h](asm-macro-32-bit-mwdt_8h.md#a1548d46b55a34b4830367a41995f6f48), [asm-macro-64-bit-mwdt.h](asm-macro-64-bit-mwdt_8h.md#aae8940805d698ecb34d3e7f37a4c4f34)
- sys\_hashmap\_cxx\_api : [hash\_map\_cxx.h](hash__map__cxx_8h.md#a53cf8ff9450b396239a928d7d079297c)
- sys\_hashmap\_oa\_lp\_api : [hash\_map\_oa\_lp.h](hash__map__oa__lp_8h.md#ab4383b628d3da139a3bf276eefde82f9)
- sys\_hashmap\_sc\_api : [hash\_map\_sc.h](hash__map__sc_8h.md#a4216aeb7b4b499bdba830ae378368588)

### - t -

- tc\_spend\_time : [tc\_util.h](tc__util_8h.md#a9bb8eafa6af5b875097421ba21a8dfc8)
- tc\_start\_time : [tc\_util.h](tc__util_8h.md#ad3aec479c61df7656ae28f68aa4dc4a5)
- tcpci\_std\_regs : [tcpci\_priv.h](tcpci__priv_8h.md#ab2204d54c7483fb06f02dda83b0066f8)
- timestamp\_check : [timestamp.h](timestamp_8h.md#a5a399603fca75f3004d45720f03f9d44)
- tm\_off : [timestamp.h](timestamp_8h.md#a2503eba6a8f75337fe8c7ee84b0b3b21)
- TOOLCHAIN\_IGNORE\_WSHADOW\_BEGIN : [signal.h](include_2zephyr_2posix_2signal_8h.md#a046385fb2ee6e77ed2791d37450fd7b2)
- TOOLCHAIN\_IGNORE\_WSHADOW\_END : [signal.h](include_2zephyr_2posix_2signal_8h.md#a7040d9d7d2e37024ea4d8acc141f805b)

### - u -

- uint32\_t : [irq\_multilevel.h](irq__multilevel_8h.md#a6b77d32212a1febe3b9e3366eb84580e)

### - x -

- x86\_memmap : [memmap.h](memmap_8h.md#a8b8229cdb36bf23f8257958fda84be4b)
- x86\_memmap\_exclusions : [memmap.h](memmap_8h.md#ab1723f77a7879fd1cc4723091241d099)
- x86\_memmap\_source : [memmap.h](memmap_8h.md#a14c4d7f538e9ae4f993c75e5e0410bf9)
- x86\_nr\_memmap\_exclusions : [memmap.h](memmap_8h.md#abb046960eea27faacf7a08d18b9a57eb)
- xtensa\_soc\_mmu\_ranges : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#gaf61e45b5fd46c1bf38d5172d7f27f2f3)
- xtensa\_soc\_mmu\_ranges\_num : [xtensa\_mmu.h](group__xtensa__mmu__apis.md#ga57a61711ec5a6613304469392f33c749)
- xtensa\_soc\_mpu\_ranges : [mpu.h](group__xtensa__mpu__apis.md#gade19640c9ba5da25451b9200b4e9178b)
- xtensa\_soc\_mpu\_ranges\_num : [mpu.h](group__xtensa__mpu__apis.md#ga4b838edd5ce1332432083bd20ca7abc1)

### - z -

- ztest\_mem\_partition : [ztest\_test.h](group__ztest__test.md#ga3adced2fdda96833e6b1ecbf3d61d446)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
